src/objects/PSG_User__c.object
<CustomObject>
    <description>List of Users who are active in PSG and not active in GSO who need to share information with GSO Users.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if user is active is PSG Salesforce</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External User Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ReContracting_Token__c</fullName>
        <description>Token used to authenticate user</description>
        <label>ReContracting Token</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recontracting_Role__c</fullName>
        <description>Used to determine security role on MM Intake form</description>
        <label>Recontracting Role</label>
        <picklist>
            <picklistValues>
                <fullName>Market Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <description>Counts the number of times a user in in accoutteammember</description>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Issued_Date__c</fullName>
        <description>Date the Re-Contracting token was issued</description>
        <label>Token Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Token_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that the user has received the authentication token via email and clicked on the link</description>
        <label>Token Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>PSG User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Title__c</columns>
        <columns>External_User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Title__c</columns>
        <columns>External_User_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recently_Added</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Title__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Recently Added</label>
    </listViews>
    <listViews>
        <fullName>Recontracting_Users</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Email__c</columns>
        <columns>External_User_Id__c</columns>
        <columns>Title__c</columns>
        <columns>Token_Issued_Date__c</columns>
        <columns>Token_Verified__c</columns>
        <columns>Recontracting_Role__c</columns>
        <columns>ReContracting_Token__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recontracting_Role__c</field>
            <operation>equals</operation>
            <value>Market Manager,Approver</value>
        </filters>
        <label>Recontracting Users</label>
    </listViews>
    <nameField>
        <label>PSG User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSG Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>